--- a/src/Components/JoReactions/reactions.css
+++ b/src/Components/JoReactions/reactions.css
@@ -144,8 +144,8 @@
     }
     .getToKnowJo {
         text-align: left !important;
-        padding-bottom: 10vh;
-        padding-top: 55vh;
+        padding-bottom: 3vh;
+        padding-top: 60vh;
     }
     .reactions {
         margin-bottom: 0rem;
